# SpiderMesh2D

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.md  README.md  vcpkg.json
.github/workflows/: publish.yml
include/: mainwindow.h  meshscene.h  meshview.h  spidermesh.h
src/: main.cpp  mainwindow.cpp  mainwindow.ui  meshscene.cpp  meshview.cpp  spidermesh.cpp
tests/: test.cpp
